# bluzelle-py

./: .bumpversion.cfg  .gitignore  .gitmodules  .travis.yml  LICENSE  MANIFEST.in  README.md  dummy.c  publish_pip_test.sh  regenerate_swig.sh  requirements.dev.txt  requirements.txt  setup.cfg  setup.py
bluzelle/: __init__.py  bluzelle.py  bzapi.py  client.py  database.py  db.py  errors.py  exceptions.py
bluzelle/async_support/: bluzelle.py  db.py
bluzelle/bzpy/: CMakeLists.txt  bzapi.i
bluzelle/lib/udp/: test_udp.py  udp_support.py
bluzelle/log/: console.py  default.py
bluzelle/tests/: test.py
bluzelle/tests/async_support/: test.py
scripts/docker-static-build-env/: README.md  setup-static-build-env.sh
tests/: str_encoding_test.py
